objects/Contact_SSV_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Field mapping for contact to ssv records. (B2B Contacts)</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <inlineHelpText>This contains the API field name of the relevant field from Contact object</inlineHelpText>
        <label>Source Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <inlineHelpText>This contains the API field name of the relevant field from Source System View object</inlineHelpText>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contact SSV Field Mapping</label>
</CustomObject>